resources/sig-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: sig-deploy
  namespace: default
  labels:
    app: sig
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sig
  template:
    metadata:
      labels:
        app: sig 
    spec:
      containers:
      - name: sig-container 
        image: 675694928506.dkr.ecr.ap-northeast-2.amazonaws.com/eyestalk-python:v1.4.3
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sig
  name: sig-svc
  namespace: default
spec:
  ports:
    - port: 5000
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app: sig
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sig
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0b5818ff36bc0f4c8, subnet-0c6c725d0881c9482, subnet-07af587ef3aeeacf5, subnet-0a5ea8991f021c361
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":5000}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:675694928506:certificate/580ad154-219c-4bcd-9560-535d06351f43
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
    alb.ingress.kubernetes.io/target-type: ip # using IP routing policy of ALB
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sig-svc # refer to the service defined in deploy.yaml
                port:
                  number: 5000
